# flappy_nn

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  REFACTOR_PLAN.md  index.html
.claude/: settings.local.json
assets/shader/: font.wgsl
engine/src/: lib.rs
engine/src/renderer/: font_manager.rs  gpu_resource_manager.rs  pipeline_manager.rs  renderer.rs  texture.rs
examples/flappy_bird/src/: application.rs  lib.rs
examples/flappy_bird/src/system/: mod.rs
examples/flappy_bird/src/system/dispatcher/: single_thread.rs
game/: main.rs
src/: application.rs  builder.rs  components.rs  game_configs.rs  game_state.rs  lib.rs  wasm_bindings.rs  winit_state.rs
src/object/: mod.rs  tile.rs
src/renderer/: builder.rs  font_manager.rs  gpu_resource_manager.rs  mesh.rs  mod.rs  pipeline_manager.rs  render_input_data.rs  renderer.rs  texture.rs  vertex.rs
src/resources/: camera.rs  game_stage.rs  gene_handler.rs  input_handler.rs  mod.rs  score.rs
src/system/: check_collision.rs  mod.rs  process_nn.rs  scroll_pipe.rs  update_animation.rs  update_camera.rs  update_physics.rs  update_pipe.rs  update_player.rs  update_scroll.rs
src/system/dispatcher/: mod.rs  multi_thread.rs  single_thread.rs
tools/: make_font_atlas.rs
