[package]
name = "flappy_nn"
version = "0.1.0"
edition = "2021"
description = "lavumi rust and wgpu practice project"
repository = "git@github.com:lavumi/flappy_nn.git"
license = ""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "flappy"
path = "game/main.rs"

[dependencies]
cfg-if = "1"
anyhow = "1.0"
winit = "0.28.3"
env_logger = "0.10"
log = "0.4"
wgpu = "0.17.0"
pollster = "0.3.0"
bytemuck = { version = "1.12", features = ["derive"] }
specs-derive = "0.4.1"
cgmath = "0.18"
instant = "0.1"
rand = "0.8.5"
fontdue = "0.7.3"
#futures-intrusive = "0.5.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0.0"
wgpu = { version = "0.17.0", features = ["webgl"]}
wasm-bindgen = "0.2.74"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3.53", features = [
    "Document",
    "Window",
    "Element",
]}
instant = { version = "0.1", features = [ "wasm-bindgen" ] }
getrandom = { version = "0.2", features = ["js"] }




[dependencies.specs]
version = "0.19.0"
default-features = false

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]