[package]
name = "flappy_nn"
version = "0.1.0"
edition = "2021"
description = "lavumi rust and wgpu practice project"
repository = "git@github.com:lavumi/flappy_nn.git"
license = ""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "flappy"
path = "game/main.rs"

[dependencies]
cfg-if = "1.0"
anyhow = "1.0"
winit = "0.30"
env_logger = "0.11"
log = "0.4"
wgpu = "27.0"
pollster = "0.3"
bytemuck = { version = "1.15", features = ["derive"] }
specs-derive = "0.4"
cgmath = "0.18"
instant = "0.1"
rand = "0.8"
fontdue = "0.7"
futures-intrusive = "0.5"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
console_log = "1.0.0"
wgpu = { version = "27.0", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
]}
instant = { version = "0.1", features = [ "wasm-bindgen" ] }
getrandom = { version = "0.2", features = ["js"] }




[dependencies.specs]
version = "0.19"
default-features = false

[dependencies.image]
version = "0.25"
default-features = false
features = ["png", "jpeg"]